--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <!--=============== CSS ===============-->
       <link rel="stylesheet" href="assets/css/styles.css">
 
-      <title>Responsive movie dashboard - Bedimcode</title>
+      <title>BookBud</title>
    </head>
    <body>
       <img src="assets/img/banner.png" alt="image" class="bg__image">
