--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <!--==================== HEADER ====================-->
       <header class="header" id="header">
          <div class="header__content">
-            <a href="#" class="header__logo">PELIXS</a>
+            <a href="#" class="header__logo">BookBud</a>
    
             <div class="header__actions">
                <i class="ri-notification-2-line"></i>
@@ -43,7 +43,7 @@
       <!--==================== NAV ====================-->
       <nav class="nav" id="nav">
          <div class="nav__menu">
-            <a href="#" class="nav__logo">PELIXS</a>
+            <a href="#" class="nav__logo">BookBud</a>
 
             <ul class="nav__list">
                <li class="nav__item">
@@ -54,15 +54,10 @@
 
                <li class="nav__item">
                   <a href="#" class="nav__link">
-                     <i class="ri-movie-line"></i> <span>Movies</span>
+                     <i class="ri-movie-line"></i> <span>E-Books</span>
                   </a>
                </li>
 
-               <li class="nav__item">
-                  <a href="#" class="nav__link">
-                     <i class="ri-film-line"></i> <span>Series</span>
-                  </a>
-               </li>
 
                <li class="nav__item">
                   <a href="#" class="nav__link">
@@ -70,29 +65,6 @@
                   </a>
                </li>
             </ul>
-
-            <div>
-               <h3 class="nav__title">Account</h3>
-               
-               <ul class="nav__list">
-                  <li class="nav__item">
-                     <a href="#" class="nav__link">
-                        <i class="ri-account-circle-line"></i> <span>Profile</span>
-                     </a>
-                  </li>
-   
-                  <li class="nav__item">
-                     <a href="#" class="nav__link">
-                        <i class="ri-account-circle-fill"></i> <span>Profile 2</span>
-                     </a>
-                  </li>
-               </ul>
-            </div>
-         </div>
-
-         <a href="#" class="nav__link">
-            <i class="ri-logout-box-line"></i> <span>Log Out</span>
-         </a>
 
          <div class="nav__close" id="nav-close">
             <i class="ri-close-line"></i>
