rich_dad_poor_dad.png

--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
          <section class="banner">
             <article class="banner__card">
                <a href="#" class="banner__link">
-                  <img src="assets/img/banner.png" alt="image" class="banner__img">
+                  <img src="assets/img/rich_dad_poor_dad.png" alt="image" class="banner__img">
                   <div class="banner__shadow"></div>
    
                   <div class="banner__data">
-                     <h2 class="banner__title">Avengers</h2>
-                     <span class="banner__category">Action</span>
+                     <h2 class="banner__title">Rich Dad Poor Dad</h2>
+                     <span class="banner__category">Self Help</span>
                   </div>
                </a>
             </article>
