--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
          <!--==================== MOVIES ====================-->
          <section class="movie">
-            <h3 class="card__title">Movies</h3>
+            <h3 class="card__title">Best Selling Books</h3>
 
             <div class="movie__swiper swiper">
                <div class="swiper-wrapper">
