--- a/index.html
+++ b/index.html
@@ -112,12 +112,12 @@
                <div class="swiper-wrapper">
                   <article class="card__article swiper-slide">
                      <a href="#" class="card__link">
-                        <img src="assets/img/movie-1.png" alt="image" class="card__img">
+                        <img src="assets/img/book-1.png" alt="image" class="card__img">
                         <div class="card__shadow"></div>
    
                         <div class="card__data">
-                           <h3 class="card__name">Avengers</h3>
-                           <span class="card__category">Action</span>
+                           <h3 class="card__name">Rich Dad Poor Dad</h3>
+                           <span class="card__category">Self Help</span>
                         </div>
    
                         <i class="ri-heart-3-line card__like"></i>
@@ -126,12 +126,12 @@
 
                   <article class="card__article swiper-slide">
                      <a href="#" class="card__link">
-                        <img src="assets/img/movie-2.png" alt="image" class="card__img">
+                        <img src="assets/img/book-2.png" alt="image" class="card__img">
                         <div class="card__shadow"></div>
    
                         <div class="card__data">
-                           <h3 class="card__name">Interstellar</h3>
-                           <span class="card__category">Science/Fiction</span>
+                           <h3 class="card__name">Think & Grow Rich</h3>
+                           <span class="card__category">Self Help</span>
                         </div>
    
                         <i class="ri-heart-3-line card__like"></i>
@@ -144,8 +144,8 @@
                         <div class="card__shadow"></div>
    
                         <div class="card__data">
-                           <h3 class="card__name">The Lord of the Rings</h3>
-                           <span class="card__category">Science/Fiction</span>
+                           <h3 class="card__name">The Power Of Subconsious Mind</h3>
+                           <span class="card__category">Self Help</span>
                         </div>
    
                         <i class="ri-heart-3-line card__like"></i>
