--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
                   <article class="card__article swiper-slide">
                      <a href="#" class="card__link">
-                        <img src="assets/img/movie-3.png" alt="image" class="card__img">
+                        <img src="assets/img/book-3.png" alt="image" class="card__img">
                         <div class="card__shadow"></div>
    
                         <div class="card__data">
