--- a/index.html
+++ b/index.html
@@ -19,17 +19,18 @@
       <img src="assets/img/banner.png" alt="image" class="bg__image">
       <div class="bg__blur"></div>
 
-      <!--==================== HEADER ====================-->
-      <header class="header" id="header">
-         <div class="header__content">
-            <a href="#" class="header__logo">BookBud</a>
-   
-            <div class="header__actions">
-               <i class="ri-notification-2-line"></i>   
-               <div class="header__menu" id="header-menu">
-                  <i class="ri-menu-line"></i>
-               </div>
-            </div>
+<!--==================== HEADER ====================-->
+<header class="header" id="header">
+   <div class="header__content">
+      <a href="#" class="header__logo">BookBud</a>
+
+      <div class="header__actions">
+         <i class="ri-notification-2-line"></i>   
+         <div class="header__menu" id="header-menu">
+            <i class="ri-menu-line"></i>
+         </div>
+      </div>
+   </div> make this opnen and closing notification and show notifications
       <!--==================== NAV ====================-->
       <nav class="nav" id="nav">
          <div class="nav__menu">
