--- a/index.html
+++ b/index.html
@@ -25,13 +25,14 @@
       <a href="#" class="header__logo">BookBud</a>
 
       <div class="header__actions">
-         <i class="ri-notification-2-line"></i>   
+         <i class="ri-notification-2-line"></i>
+         <i class="ri-account-circle-line"></i>
+
          <div class="header__menu" id="header-menu">
             <i class="ri-menu-line"></i>
          </div>
       </div>
-   </div> make this opnen and closing notification and show notifications
-      <!--==================== NAV ====================-->
+   </div>
       <nav class="nav" id="nav">
          <div class="nav__menu">
             <a href="#" class="nav__logo">BookBud</a>
