--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
          </div>
       </div>
    </div>
+   
+   <form action="" class="header__search">
+      <i class="ri-search-line"></i>
+      <input type="search" placeholder="Search movies" class="header__input">
+   </form>
+</header>
+      <!--==================== NAV ====================-->
       <nav class="nav" id="nav">
          <div class="nav__menu">
             <a href="#" class="nav__logo">BookBud</a>
