--- a/index.html
+++ b/index.html
@@ -88,6 +88,21 @@
     </form>
 
 </div>
+<!-- signup form  -->
+<div class="signup-form-container" style="display: none;">
+    <div id="close-signup-btn" class="fas fa-times"></div>
+    <form action="">
+        <h3>Sign Up</h3>
+        <span>Full Name</span>
+        <input type="text" name="fullname" class="box" placeholder="Enter your full name" id="">
+        <span>Email</span>
+        <input type="email" name="email" class="box" placeholder="Enter your email" id="">
+        <span>Password</span>
+        <input type="password" name="password" class="box" placeholder="Enter your password" id="">
+        <input type="submit" value="Sign Up" class="btn">
+    </form>
+</div>
+<!-- signup form ends -->
 
 <!-- home section starts  -->
 
