--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <div class="header-1">
 
-        <a href="#" class="logo"> <i class="fas fa-book"></i> Books4MU </a>
+        <a href="#" class="logo"> <i class="fas fa-book"></i> Phoenix Books</p> </a>
 
         <form action="" class="search-form">
             <input type="search" name="" placeholder="search here..." id="search-box">
@@ -126,7 +126,7 @@
 
         <div class="content">
             <h3>upto 75% off</h3>
-            <p>If you’re an Engineering student and need a books, Books4MU has great deals on a wide range of books. Shop for these books from top authors and avail hugely discounted prices</p>
+            <p>If you’re an Engineering student and need a books, Phoenix Books</b></b> has great deals on a wide range of books. Shop for these books from top authors and avail hugely discounted prices</p>
             <a href="#" class="btn">shop now</a>
         </div>
 
