--- a/index.html
+++ b/index.html
@@ -637,10 +637,10 @@
 
         <div class="box">
             <h3>contact info</h3>
-            <a href="#"> <i class="fas fa-phone"></i> 9167064054 </a>
-            <a href="#"> <i class="fas fa-phone"></i> 77388 44717 </a>
-            <a href="#"> <i class="fas fa-envelope"></i> kordepriyanka1118@gmail.com </a>
-            <a href="#"> <i class="fas fa-envelope"></i> rohitmishra.rm2106@gmail.com </a>
+            <a href="#"> <i class="fas fa-phone"></i> 9706315129 </a>
+            <a href="#"> <i class="fas fa-phone"></i> 9745280405 </a>
+            <a href="#"> <i class="fas fa-envelope"></i> phoenixbooks@sajanchhetri.com.np </a>
+            <a href="#"> <i class="fas fa-envelope"></i> Phoenix@sajanchhetri.com.np </a>
             <img src="https://raw.githubusercontent.com/KordePriyanka/Books4MU-Book-Store-Website-/main/image/worldmap.png" class="map" alt="">
         </div>
 
@@ -648,13 +648,13 @@
 
     <div class="share">
         <a href="#" class="fab fa-facebook-f"></a>
-        <a href="https://twitter.com/priyankakorde" class="fab fa-twitter"></a>
-        <a href="https://www.instagram.com/im_priyankak_/" class="fab fa-instagram"></a>
-        <a href="https://www.linkedin.com/in/priyanka-korde-2029521a1/" class="fab fa-linkedin"></a>
-        <a href="https://www.linkedin.com/in/rohit-m-3494521a2/" class="fab fa-linkedin"></a>
+        <a href="https://twitter.com/" class="fab fa-twitter"></a>
+        <a href="https://www.instagram.com//" class="fab fa-instagram"></a>
+        <a href="https://www.linkedin.com/in//" class="fab fa-linkedin"></a>
+        <a href="https://www.linkedin.com/in//" class="fab fa-linkedin"></a>
     </div>
 
-    <div class="credit"> created by <span>Priyanka Korde & Rohit Mishra </span>copyright ©2022 all rights reserved! </div>
+    <div class="credit"> created by <span>Sajan Chhetri & Ashish Thapa </span>copyright ©2024 all rights reserved! </div>
 
 </section>
 
