--- a/index.html
+++ b/index.html
@@ -671,6 +671,25 @@
 
 <!-- custom js file link  -->
 <script src="assets/js/main.js"></script>
-
+<script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.9.0/firebase-app.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+  
+    // Your web app's Firebase configuration
+    const firebaseConfig = {
+      apiKey: "AIzaSyCvIMIpUXPGdzvpi7NR_dZNMpO_H0qS2I0",
+      authDomain: "authentication-app-97c81.firebaseapp.com",
+      databaseURL: "https://authentication-app-97c81-default-rtdb.firebaseio.com",
+      projectId: "authentication-app-97c81",
+      storageBucket: "authentication-app-97c81.appspot.com",
+      messagingSenderId: "1027947144018",
+      appId: "1:1027947144018:web:9a79347004c8ac0a1b108b"
+    };
+  
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+  </script>
 </body>
 </html>
